--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,4 +11,8 @@
   font-weight: 300;
 }
 
+.ngx-gallery-preview-top {
+  margin-top: 90px !important;
+}
+
 
